ecmascript/parser/tests/typescript-errors/issue-2198/ts/input.ts.stderr
error: literal in an import type should be string literal
 --> $DIR/tests/typescript-errors/issue-2198/ts/input.ts:1:53
  |
1 | function imp<T extends string>(x: T): typeof import(T) {
  |                                                     ^

